# mle-flake8-plugins

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  pull_request.yml
flake8_docstring_sections/: __init__.py  attribute_checker.py  errors.py
mle_flake8_plugins/flake8_mle_convention/: __init__.py  disallow_final_w_pydantic.py  errors.py  legacy_type_hint_checker.py  no_operation_checker.py  two_operation_checker.py  type_hint_checker.py
mle_flake8_plugins/flake8_mle_docstring/: __init__.py  attribute_checker.py  errors.py
tests/: test_attribute_checker.py  test_disallow_final_w_pydantic.py  test_legacy_type_hint_checker.py  test_no_operation_checker.py  test_two_operations_checker.py  test_type_hint_checker.py
