[tool.poetry]
name = "flake8-docstring-sections"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docstring-parser = "^0.15"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
D50 = "flake8_docstring_sections:DocstringSectionChecker"
