[tool.poetry]
name = "mle-flake8-plugins"
version = "0.2.3"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docstring-parser = "^0.15"
flake8 = "^5.0.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^22.8.0"
pytest = "^7.1.3"
autoflake = ">=1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
MLE00 = "mle_flake8_plugins.flake8_mle_docstring:MleDocstringChecker"
MLE10 = "mle_flake8_plugins.flake8_mle_convention:MleConventionChecker"
